# cncodec_demo

./: .gitignore  CMakeLists.txt
include/: blockqueue.h  video_decoder.hpp
src/: video_decoder.cpp
